new website fixes

--- a/contributions.html
+++ b/contributions.html
@@ -47,62 +47,62 @@
             <div>
                 <h3>Visually Accessible Data Visualization, 2023</h3>
                 <p>How we designed data visualization to be more visually accessible at Plaid using patterns, shapes, and high contrast colors</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/plaid-design/visually-accessible-data-visualization-ff884121479b" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/plaid-design/visually-accessible-data-visualization-ff884121479b" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Design Systems Operations at Plaid, 2022</h3>
                 <p>A peek inside how the design systems team operates at Plaid</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/plaid-design/design-systems-operations-at-plaid-894d703359f9" target="_blank" title="Design Systems Operations at Plaid on Medium" aria-label="Open Design Systems Operations at Plaid on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/plaid-design/design-systems-operations-at-plaid-894d703359f9" target="_blank" title="Design Systems Operations at Plaid on Medium" aria-label="Open Design Systems Operations at Plaid on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>The Psychological Component of Design Systems, 2021</h3>
                 <p>7 thoughts on designing systems to make the brain work as little as needed.</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/the-psychological-component-of-design-systems-ded716d253d1" target="_blank" title="The Psychological Component of Design Systems on Medium" aria-label="Open The Psychological Component of Design Systems on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/the-psychological-component-of-design-systems-ded716d253d1" target="_blank" title="The Psychological Component of Design Systems on Medium" aria-label="Open The Psychological Component of Design Systems on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Designing Systems at Gusto, 2021</h3>
                 <p>Building tools for and collaborating with product designers on the Gusto design team</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/gusto-design/design-systems-at-gusto-462d653824b" target="_blank" title="Designing Systems at Gusto on Medium" aria-label="Open Designing Systems at Gusto on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/gusto-design/design-systems-at-gusto-462d653824b" target="_blank" title="Designing Systems at Gusto on Medium" aria-label="Open Designing Systems at Gusto on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>So you want to build a design system?, 2021</h3>
                 <p>Featured on the Mae Capozzi newsletter</p>
-                <p style="margin-top: 5px;"><a href="https://maecapozzi.com/newsletter/66" target="_blank" title="So you want to build a design system?" aria-label="Open So you want to build a design system? on Mae Capozzi's Newsletter in a new tab.">Article</a></p>
+                <p><a href="https://maecapozzi.com/newsletter/66" target="_blank" title="So you want to build a design system?" aria-label="Open So you want to build a design system? on Mae Capozzi's Newsletter in a new tab.">Newsletter</a></p>
             </div>
             <div>
                 <h3>How we name typography tokens at Gusto, 2021</h3>
                 <p>Featured on the Mae Capozzi newsletter</p>
-                <p style="margin-top: 5px;"><a href="https://maecapozzi.com/newsletter/54" target="_blank" title="How we name typography tokens at Gusto" aria-label="Open How we name typography tokens at Gusto on Mae Capozzi's Newsletter in a new tab.">Article</a></p>
+                <p><a href="https://maecapozzi.com/newsletter/54" target="_blank" title="How we name typography tokens at Gusto" aria-label="Open How we name typography tokens at Gusto on Mae Capozzi's Newsletter in a new tab.">Newsletter</a></p>
             </div>
             <div>
                 <h3>Signals (Design System for Alarm.com), 2020</h3>
                 <p>Learnings from designing for a native design system</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Signals on Medium" aria-label="Open Signals on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Signals on Medium" aria-label="Open Signals on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Design Systems Operations at Plaid, 2022</h3>
                 <p>Learnings from designing for a native design system</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/plaid-design/design-systems-operations-at-plaid-894d703359f9" target="_blank" title="Design Systems Operations at Plaid on Medium" aria-label="Open Design Systems Operations at Plaid on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/plaid-design/design-systems-operations-at-plaid-894d703359f9" target="_blank" title="Design Systems Operations at Plaid on Medium" aria-label="Open Design Systems Operations at Plaid on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Vapor/Redwood (Design System for Oracle), 2020</h3>
                 <p>Learnings from designing for an enterprise design system</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" target="_blank" title="Vapor/Redwood on Medium" aria-label="Open Vapor/Redwood on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" target="_blank" title="Vapor/Redwood on Medium" aria-label="Open Vapor/Redwood on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Autra — Automatic Content Translation, 2018</h3>
                 <p>How we can encourage better communication between diverse parties using technology</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank" title="Autra - Automatic Content Translation on Medium" aria-label="Open Autra - Automatic Content Translation on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank" title="Autra - Automatic Content Translation on Medium" aria-label="Open Autra - Automatic Content Translation on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>Being a Color Blind Designer, 2018</h3>
                 <p>How discovering my Red-Green color blindness changed my workflow</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" target="_blank" title="Being a Color Blind Designer on Medium" aria-label="Open Being a Color Blind Designer on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" target="_blank" title="Being a Color Blind Designer on Medium" aria-label="Open Being a Color Blind Designer on Medium in a new tab.">Article</a></p>
             </div>
             <div>
                 <h3>My 4.5 Month Journey With Daily UI, 2016</h3>
                 <p>Learnings from designing and animating a user interface prompt for 100 straight days</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank" title="My 4.5 Month Journey With Daily UI on Medium" aria-label="Open My 4.5 Month Journey With Daily UI on Medium in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank" title="My 4.5 Month Journey With Daily UI on Medium" aria-label="Open My 4.5 Month Journey With Daily UI on Medium in a new tab.">Article</a></p>
             </div>
         </div>
         <div class="section">
