--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         </div>
         <div class="section">
             <h2>Work</h2>
-            <div>
+            <div class="text-container">
                 <h3>Wikimedia Foundation</h3>
                 <p>Lead Visual Designer, Design Systems, October 2023 – present</p>
             </div>
-            <div>
+            <div class="text-container">
                 <h3>Plaid</h3>
                 <p>Senior Product Designer, Design Systems, February 2022 – October 2023</p>
             </div>
-            <div>
+            <div class="text-container">
                 <h3>Gusto</h3>
                 <p>Senior Product Designer, Design Systems, November 2020 – January 2022</p>
             </div>
-            <div>
+            <div class="text-container">
                 <h3>Oracle</h3>
                 <p>Senior Product Designer, April 2018 – October 2020</p>
             </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="section">
             <h2>Education</h2>
-            <div>
+            <div class="text-container">
                 <h3>Maryland Institute College of Art</h3>
                 <p>Bachelor of Fine Arts, Graphic Design</p>
                 <p>January 2008 – May 2011, Cum Laude</p>
