--- a/templates.html
+++ b/templates.html
@@ -32,7 +32,7 @@
         <nav>
             <p><a href="index.html" title="About" aria-label="Read about Derek Torsani in the same tab.">About</a></p>
             <p><a href="projects.html" title="Projects" aria-label="Open a list of Derek Torsani's projects in the same tab.">Projects</a></p>
-            <p><a class="current" href="contributions.html" title="Contributions" aria-label="Open a list of Derek Torsani's contributions in the same tab.">Contributions</a></p>
+            <p><a href="contributions.html" title="Contributions" aria-label="Open a list of Derek Torsani's contributions in the same tab.">Contributions</a></p>
             <p><a href="discography.html" title="Discography" aria-label="Open a list of Derek Torsani's discography in the same tab.">Discography</a></p>
             <p><a class="current" href="templates.html" title="Templates" aria-label="Open a list of productivity templates made by Derek Torsani in the same tab.">Templates</a></p>
         </nav>
@@ -47,19 +47,19 @@
                 <h2>Halfdollar</h2>
                 <h3>Finance Management</h3>
                 <p>Collaborative and customizable budgeting spreadsheet.</p>
-                <p style="margin-top: 5px;"><a href="https://www.airtable.com/universe/expaZVZSRDqLWgtn7/halfdollar" target="_blank" title="Halfdollar" aria-label="Open the Halfdollar budgeting template in a new tab.">Template</a></p>
+                <p><a href="https://www.airtable.com/universe/expaZVZSRDqLWgtn7/halfdollar" target="_blank" title="Halfdollar" aria-label="Open the Halfdollar budgeting template in a new tab.">Template</a></p>
             </div>
             <div>
                 <h2>Weiigh</h2>
                 <h3>Decision Making</h3>
                 <p>Spreadsheet for helping to make calculated decisions.</p>
-                <p style="margin-top: 5px;"><a href="https://www.airtable.com/universe/expFr123awk7OObi4/weiigh-make-better-decisions" target="_blank" title="Weiigh" aria-label="Open the Weigh decision making template in a new tab.">Template</a></p>
+                <p><a href="https://www.airtable.com/universe/expFr123awk7OObi4/weiigh-make-better-decisions" target="_blank" title="Weiigh" aria-label="Open the Weigh decision making template in a new tab.">Template</a></p>
             </div>
             <div>
                 <h2>Groceries</h2>
                 <h3>Grocery List</h3>
                 <p>Dynamic, collaborative grocery list for multiple store shopping.</p>
-                <p style="margin-top: 5px;"><a href="https://calabash.notion.site/cb5ad07b2ea34cfc82eeba749794f078?v=209e1fabd59b42b8bb6d9b7d5e0845b5&pvs=4" target="_blank" title="Groceries" aria-label="Open the groceries list template in a new tab.">Template</a></p>
+                <p><a href="https://calabash.notion.site/cb5ad07b2ea34cfc82eeba749794f078?v=209e1fabd59b42b8bb6d9b7d5e0845b5&pvs=4" target="_blank" title="Groceries" aria-label="Open the groceries list template in a new tab.">Template</a></p>
             </div>
         </div>
     </div>
