--- a/discography.html
+++ b/discography.html
@@ -47,7 +47,7 @@
             <div>
                 <h2>Intermission, New Life, 2022</h2>
                 <h3>Instrumentation, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/3AuUvPQDc22u7VKZSEk7Mf?si=foFoIdE4TnCD8QhJM8OyzA" target="_blank" title="Spotify" aria-label="Listen to New Life by Intermission on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/new-life/1654687366" target="_blank" title="Apple Music" aria-label="Listen to New Life by Intermission on Apple Music in a new tab.">Apple Music</a>
@@ -63,7 +63,7 @@
             <div>
                 <h2>PRJCT UNTLD, Home Cooking, 2022</h2>
                 <h3>Bass</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/6VKodQ3C1rmme8jjj9ckpJ?si=7azZWbWsS2uccmpO6TxixA" target="_blank" title="Spotify" aria-label="Listen to Home Cooking by Project Untitled on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/home-cooking-single/1648142579" target="_blank" title="Apple Music" aria-label="Listen to Home Cooking by Project Untitled on Apple Music in a new tab.">Apple Music</a>
@@ -79,7 +79,7 @@
             <div>
                 <h2>Derek Torsani, Say Their Names, 2021</h2>
                 <h3>Keys, Piano, Bass, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/6wuFeJtukTHBtHYihk2TlA?si=DF6EuAm8RRmOHq6Mxb8iEQ" target="_blank" title="Spotify" aria-label="Listen to Say Their Names by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/say-their-names-ep/1656951004" target="_blank" title="Apple Music" aria-label="Listen to Say Their Names by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -97,7 +97,7 @@
             <div>
                 <h2>Tsimtsum, g(host), 2021</h2>
                 <h3>Instrumentation, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/3lJKPjmktLZBaoZF442UMI?si=kkVKbxmPQtaKHkxtqz3i3Q" target="_blank" title="Spotify" aria-label="Listen to Ghost by Tsimtsum on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/g-host-single/1668519271" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Tsimtsum on Apple Music in a new tab.">Apple Music</a>
@@ -113,7 +113,7 @@
             <div>
                 <h2>Derek Torsani, Highland (Live), 2021</h2>
                 <h3>Keys, Bass, Samples, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/7BuA46PPxJrpsa9joDpc4i?si=Cl28JAEETmSd-K0YtrMdiw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/highland-live-live-single/1672972116" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -129,7 +129,7 @@
             <div>
                 <h2>Derek Torsani, Seeds, 2021</h2>
                 <h3>Keys, Piano, Bass, Drones, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/47JM2Shp4fAK7IUg3SZDHj?si=PVbt_JrMSrqPPTd4_VNLWw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1560327338" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -147,7 +147,7 @@
             <div>
                 <h2>Rudder North, Rudder North, 2012</h2>
                 <h3>Acoustic Guitar, Percussion, Harmonica, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/artist/3p8LkkQurMJGU2UEroVWAi?si=Hg2tjAfiSlu85GPJpDw5Pw" target="_blank" title="Spotify" aria-label="Listen to Rudder North on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/artist/rudder-north/1593605627" target="_blank" title="Apple Music" aria-label="Listen to Rudder North on Apple Music in a new tab.">Apple Music</a>
@@ -164,7 +164,7 @@
             <div>
                 <h2>Rudder North, Redwoods, 2010</h2>
                 <h3>Acoustic guitar, Mandolin, Percussion, Harmonica, Composition, Production</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/artist/3p8LkkQurMJGU2UEroVWAi?si=Hg2tjAfiSlu85GPJpDw5Pw" target="_blank" title="Spotify" aria-label="Listen to Rudder North on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/artist/rudder-north/1593605627" target="_blank" title="Apple Music" aria-label="Listen to Rudder North on Apple Music in a new tab.">Apple Music</a>
@@ -181,7 +181,7 @@
             <div>
                 <h2>For Better For Worse, I Remember, 2008</h2>
                 <h3>Electric Guitar, Composition</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/artist/6jlyi0WHscLeiLiRrEF28t?si=qo3iX_xZS3ysp0XjcrW3zg" target="_blank" title="Spotify" aria-label="Listen to For Better For Worse on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/artist/for-better-for-worse/1593464182" target="_blank" title="Apple Music" aria-label="Listen to For Better For Worse on Apple Music in a new tab.">Apple Music</a>
@@ -197,7 +197,7 @@
             <div>
                 <h2>For Better For Worse, Their Eyes, 2008</h2>
                 <h3>Electric Guitar, Composition</h3>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/artist/6jlyi0WHscLeiLiRrEF28t?si=qo3iX_xZS3ysp0XjcrW3zg" target="_blank" title="Spotify" aria-label="Listen to For Better For Worse on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/artist/for-better-for-worse/1593464182" target="_blank" title="Apple Music" aria-label="Listen to For Better For Worse on Apple Music in a new tab.">Apple Music</a>
