--- a/projects.html
+++ b/projects.html
@@ -44,26 +44,26 @@
         </div>
         <div class="section">
             <video autoplay playsinline muted loop>
-                <source src="assets/sound-color-project.webm" type="video/webm">
+                <source src="assets/sound-color-project.mp4" type="video/webm">
                 <meta itemprop="description" content="Derek Torsani playing multiple instruments while the room fills with colorful light.">
             </video>
-            <div>
+            <div class="text-container">
                 <h2>Sound Color Project</h2>
                 <h3>Founder, Designer</h3>
                 <p>Technology for translating between the audible and visual spectrums using sound, color, and light.</p>
-                <p style="margin-top: 5px;"><a href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project" aria-label="Visit Sound Color Project in a new tab.">soundcolorproject.com</a></p>
+                <p><a href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project" aria-label="Visit Sound Color Project in a new tab.">soundcolorproject.com</a></p>
             </div>
         </div>
         <div class="section">
             <video autoplay playsinline muted loop>
-                <source src="assets/patterns.webm" type="video/webm">
+                <source src="assets/patterns.mp4" type="video/webm">
                 <meta itemprop="description" content="A looping animation of five different transforming patterns.">
             </video>
-            <div>
+            <div class="text-container">
                 <h2>Accessible Data Visualization</h2>
                 <h3>Designer</h3>
                 <p>Library of patterns and logic for creating visually accessible data visualization.</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/plaid-design/visually-accessible-data-visualization-ff884121479b" target="_blank" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Article</a></p>
+                <p><a href="https://medium.com/plaid-design/visually-accessible-data-visualization-ff884121479b" target="_blank" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Article</a></p>
             </div>
         </div>
         <div class="section">
@@ -78,22 +78,22 @@
                 <img src="assets/expandable-search.gif" alt="A search field expanding and showing text being typed in."/>
                 <img src="assets/eyeball-menu.gif" alt="A line drawing of an eye being animated from opened to closed." style="border-radius: 0 0 13px 0;"/>
             </div>
-            <div>
+            <div class="text-container">
                 <h2>Collection of Animations</h2>
                 <h3>Designer, Animator</h3>
                 <p>Two-dimensional.</p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank" title="My 4.5 Month Journey With Daily UI on Medium" aria-label="Open My 4.5 Month Journey With Daily UI on Medium in a new tab.">Daily UI</a></p>
-                <p style="margin-top: 5px;"><a href="https://codepen.io/dmtors/pen/MJLMWN" target="_blank" title="CodePen" aria-label="Open CodePen in a new tab.">Expandable Search</a></p>
-                <p style="margin-top: 5px;"><a href="https://medium.com/prototypr/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank" title="Show/Hide Menu Article" aria-label="Read more about the eyeball menu concept in a new tab.">Eyeball Menu Concept</a></p>
+                <p><a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank" title="My 4.5 Month Journey With Daily UI on Medium" aria-label="Open My 4.5 Month Journey With Daily UI on Medium in a new tab.">Daily UI</a></p>
+                <p><a href="https://codepen.io/dmtors/pen/MJLMWN" target="_blank" title="CodePen" aria-label="Open CodePen in a new tab.">Expandable Search</a></p>
+                <p><a href="https://medium.com/prototypr/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank" title="Show/Hide Menu Article" aria-label="Read more about the eyeball menu concept in a new tab.">Eyeball Menu Concept</a></p>
             </div>
         </div>
         <div class="section">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/47JM2Shp4fAK7IUg3SZDHj?utm_source=generator" width="100%" height="376" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <div>
+            <div class="text-container">
                 <h2>Seeds</h2>
                 <h3>Composer, Musician, Producer</h3>
                 <p>Ambient jazz.</p>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/47JM2Shp4fAK7IUg3SZDHj?si=PVbt_JrMSrqPPTd4_VNLWw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1560327338" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -108,11 +108,11 @@
         </div>
         <div class="section">
             <iframe src="https://www.youtube.com/embed/G-zZRb5CPi8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="aspect-ratio: 16 / 9;"></iframe>
-            <div>
+            <div class="text-container">
                 <h2>Highland (Live)</h2>
                 <h3>Composer, Performer</h3>
                 <p>Live musical performance.</p>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/7BuA46PPxJrpsa9joDpc4i?si=Cl28JAEETmSd-K0YtrMdiw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/highland-live-live-single/1672972116" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -125,11 +125,11 @@
         </div>
         <div class="section">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6wuFeJtukTHBtHYihk2TlA?utm_source=generator" width="100%" height="376" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <div>
+            <div class="text-container">
                 <h2>Say Their Names</h2>
                 <h3>Composer, Musician, Producer</h3>
                 <p>Protest jazz.</p>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/6wuFeJtukTHBtHYihk2TlA?si=DF6EuAm8RRmOHq6Mxb8iEQ" target="_blank" title="Spotify" aria-label="Listen to Say Their Names by Derek Torsani on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/say-their-names-ep/1656951004" target="_blank" title="Apple Music" aria-label="Listen to Say Their Names by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
@@ -144,11 +144,11 @@
         </div>
         <div class="section">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lJKPjmktLZBaoZF442UMI?utm_source=generator" width="100%" height="376" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <div>
+            <div class="text-container">
                 <h2>g(host)</h2>
                 <h3>Composer, Musician, Producer</h3>
                 <p>Alternative.</p>
-                <div class="link-group" style="margin-top: 5px;">
+                <div class="link-group">
                     <p>
                         <a href="https://open.spotify.com/album/3lJKPjmktLZBaoZF442UMI?si=kkVKbxmPQtaKHkxtqz3i3Q" target="_blank" title="Spotify" aria-label="Listen to Ghost by Tsimtsum on Spotify in a new tab.">Spotify</a>
                         <a href="https://music.apple.com/us/album/g-host-single/1668519271" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Tsimtsum on Apple Music in a new tab.">Apple Music</a>
@@ -161,7 +161,7 @@
         </div>
         <div class="section">
             <iframe src="https://www.youtube.com/embed/1_bHvFZfrLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div>
+            <div class="text-container">
                 <h2>Last Month</h2>
                 <h3>Writer, Producer, Cinematographer, Editor, Sound Designer</h3>
                 <p>Documentary film.</p>
@@ -169,7 +169,7 @@
         </div>
         <div class="section">
             <iframe src="https://www.youtube.com/embed/NT9N7wiy0Dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div>
+            <div class="text-container">
                 <h2>Below The Line</h2>
                 <h3>Cinematographer, Editor, Sound Designer</h3>
                 <p>Title sequence.</p>
@@ -177,7 +177,7 @@
         </div>
         <div class="section">
             <img src="assets/arthur.jpg" alt="A painting of a portrait of a dog sitting in a regal manner."/>
-            <div>
+            <div class="text-container">
                 <h2>Arthur</h2>
                 <h3>Artist</h3>
                 <p>Acrylic on canvas.</p>
@@ -185,7 +185,7 @@
         </div>
         <div class="section">
             <img src="assets/jantar-mantar.jpg" alt="A photograph of three separate black and white abstract line drawings."/>
-            <div>
+            <div class="text-container">
                 <h2>Study of Jantar Mantar</h2>
                 <h3>Artist</h3>
                 <p>Wax pencil on paper.</p>
@@ -193,7 +193,7 @@
         </div>
         <div class="section">
             <img src="assets/srsly.jpg" alt="A series of white index cards, each with black yard letters threaded to spell out an abbreviation for 'dance with me'."/>
-            <div>
+            <div class="text-container">
                 <h2>srsly</h2>
                 <h3>Artist</h3>
                 <p>Yarn on paper.</p>
