updated music links

--- a/projects.html
+++ b/projects.html
@@ -95,13 +95,11 @@
                 <p>Ambient jazz.</p>
                 <div class="link-group">
                     <p>
-                        <a href="https://open.spotify.com/album/47JM2Shp4fAK7IUg3SZDHj?si=PVbt_JrMSrqPPTd4_VNLWw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
-                        <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1560327338" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
-                        <a href="https://tidal.com/browse/album/178700542" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">Tidal</a>
-                        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lu83vPVK6OPUXXEnxV7dIWReFO4_0bfiU&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a>
-                        <a href="https://music.amazon.com/albums/B09164VM5M" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a>
-                        <a href="https://derektorsani.bandcamp.com/album/seeds" target="_blank" title="Bandcamp" aria-label="Listen to Seeds by Derek Torsani on Bandcamp in a new tab.">Bandcamp</a>
-                        <a href="https://soundcloud.com/derektorsani/sets/seeds" target="_blank" title="SoundCloud" aria-label="Listen to Seeds by Derek Torsani on SoundCloud in a new tab.">SoundCloud</a>
+                        <a href="https://open.spotify.com/album/4fJ6XazF261Ht02i5D4fJx?si=TqDd5JyZQrqcAB87gy4Bdw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a>
+                        <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1751715075" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
+                        <a href="https://tidal.com/browse/album/368972667" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">Tidal</a>
+                        <a href="https://music.youtube.com/playlist?list=OLAK5uy_m44dk4TJJ5f9v1uo2FNx_x3Yfz2hVKOSg&si=09VDQMvRaMM0LF0V" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a>
+                        <a href="https://music.amazon.com/albums/B0D6WFZQK3" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a>
                     </p>
                 </div>
             </div>
@@ -145,16 +143,16 @@
         <div class="section">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lJKPjmktLZBaoZF442UMI?utm_source=generator" width="100%" height="376" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <div class="text-container">
-                <h2>g(host)</h2>
+                <h2>Ghost</h2>
                 <h3>Composer, Musician, Producer</h3>
                 <p>Alternative.</p>
                 <div class="link-group">
                     <p>
-                        <a href="https://open.spotify.com/album/3lJKPjmktLZBaoZF442UMI?si=kkVKbxmPQtaKHkxtqz3i3Q" target="_blank" title="Spotify" aria-label="Listen to Ghost by Tsimtsum on Spotify in a new tab.">Spotify</a>
-                        <a href="https://music.apple.com/us/album/g-host-single/1668519271" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Tsimtsum on Apple Music in a new tab.">Apple Music</a>
-                        <a href="https://tidal.com/browse/album/273889818" target="_blank" title="Tidal" aria-label="Listen to Ghost by Tsimtsum on Tidal in a new tab.">Tidal</a>
-                        <a href="https://music.youtube.com/playlist?list=OLAK5uy_k80ihDfKz7BSjFuXgPlnoD2YRJQFcpUOg&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Ghost by Tsimtsum on YouTube Music in a new tab.">YouTube Music</a>
-                        <a href="https://music.amazon.com/albums/B0BT9CSB85" target="_blank" title="Amazon Music" aria-label="Listen to Ghost by Tsimtsum on Amazon Music in a new tab.">Amazon Music</a>
+                        <a href="https://open.spotify.com/album/7enBUZl5guEfCCGynLN82P?si=TiaZHv6mQra-OKTMW1piNg" target="_blank" title="Spotify" aria-label="Listen to Ghost by Derek Torsani on Spotify in a new tab.">Spotify</a>
+                        <a href="https://music.apple.com/us/album/ghost-feat-casey-reed-single/1750429683" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Derek Torsani on Apple Music in a new tab.">Apple Music</a>
+                        <a href="https://tidal.com/browse/album/367466205" target="_blank" title="Tidal" aria-label="Listen to Ghost by Derek Torsani on Tidal in a new tab.">Tidal</a>
+                        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lZVwKXujNMtYpX92IcT1YSdeoEZQukQEs&si=oDtVp2uGf-iymKYO" target="_blank" title="YouTube Music" aria-label="Listen to Ghost by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a>
+                        <a href="https://music.amazon.com/albums/B0D663ZRF6" target="_blank" title="Amazon Music" aria-label="Listen to Ghost by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a>
                     </p>
                 </div>
             </div>
