--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Inter:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144041212-1"></script>
@@ -23,72 +23,113 @@
 
 <body>
 
-    <div class="nav">
-        <a class="img-link" href="index.html">
-            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M32 0H0V32H32V0ZM17.0768 8.68225C20.1064 8.68225 22.5625 11.0923 22.5625 14.0654C22.5625 17.0385 20.1064 19.4486 17.0768 19.4486V21.1309C21.0532 21.1309 24.2768 17.9675 24.2768 14.0654C24.2768 10.1633 21.0532 7 17.0768 7V8.68225ZM12.6946 15.0748V25H14.4089V15.0748H19.3804V13.3925H7.72321V15.0748H12.6946Z"/>
-            </svg>
-        </a>
-        <nav>
-            <p><a class="current" href="index.html" title="About" aria-label="Read about Derek Torsani in the same tab.">About</a></p>
-            <p><a href="projects.html" title="Projects" aria-label="Open a list of Derek Torsani's projects in the same tab.">Projects</a></p>
-            <p><a href="contributions.html" title="Contributions" aria-label="Open a list of Derek Torsani's contributions in the same tab.">Contributions</a></p>
-            <p><a href="discography.html" title="Discography" aria-label="Open a list of Derek Torsani's discography in the same tab.">Discography</a></p>
-            <p><a href="templates.html" title="Templates" aria-label="Open a list of productivity templates made by Derek Torsani in the same tab.">Templates</a></p>
-        </nav>
-    </div>
+    <script src='as-dithered-image.js'></script>
 
-    <div class="page">
-        <div class="header">
-            <h1>About</h1>
+    <section>
+        <as-dithered-image class="image" src="portrait.jpg" crunch="1"></as-dithered-image>
+        <div id="banner">
+            <p>→</p>
+            <p>design</p>
+            <svg viewBox="0 0 100 100" style="--duration: 1.5s">
+                <!-- Small filled-in center circle -->
+                <circle cx="50" cy="50" r="15" />
+                
+                <!-- Half circle path -->
+                <path 
+                d="M 50 10 
+                    A 40 40 0 0 1 90 50 
+                    A 40 40 0 0 1 50 90" 
+                fill="none" 
+                stroke-width="10" 
+                class="half-circle"
+                />
+            </svg>
+            <p>art</p>
+            <svg viewBox="0 0 100 100" style="--duration: 1.75s">
+                <!-- Small filled-in center circle -->
+                <circle cx="50" cy="50" r="15" />
+                
+                <!-- Half circle path -->
+                <path 
+                    d="M 50 10 
+                        A 40 40 0 0 1 90 50 
+                        A 40 40 0 0 1 50 90" 
+                    fill="none" 
+                    stroke-width="10" 
+                    class="half-circle"
+                />
+            </svg>
+            <p>music</p>
         </div>
-        <div class="section">
-            <p><b>Derek Torsani</b> is a practitioner of music, graphic art, cooking, writing, drawing, and photography. He leads visual design at the Wikimedia Foundation, and lives with his family in Baltimore, Maryland.</p>
-            <p>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." <b>— Tupac Shakur, 1992</b></p>
-        </div>
-        <div class="section">
-            <h2>Work</h2>
-            <div class="text-container">
-                <h3>Wikimedia Foundation</h3>
-                <p>Lead Visual Designer, Design Systems, October 2023 – present</p>
-            </div>
-            <div class="text-container">
-                <h3>Plaid</h3>
-                <p>Senior Product Designer, Design Systems, February 2022 – October 2023</p>
-            </div>
-            <div class="text-container">
-                <h3>Gusto</h3>
-                <p>Senior Product Designer, Design Systems, November 2020 – January 2022</p>
-            </div>
-            <div class="text-container">
-                <h3>Oracle</h3>
-                <p>Senior Product Designer, April 2018 – October 2020</p>
-            </div>
-            <p><a href="assets/derektorsani-resume.pdf" target="_blank" title="Résumé" aria-label="Open Derek Torsani's résumé in a new tab.">Full résumé</a></p>
-        </div>
-        <div class="section">
-            <h2>Education</h2>
-            <div class="text-container">
-                <h3>Maryland Institute College of Art</h3>
-                <p>Bachelor of Fine Arts, Graphic Design</p>
-                <p>January 2008 – May 2011, Cum Laude</p>
-            </div>
-        </div>
-        <div class="section">
-            <h2>Elsewhere</h2>
-            <div class="link-group">
-                <p>
-                    <a href="https://www.linkedin.com/in/derektorsani" target="_blank" title="LinkedIn" aria-label="Visit Derek Torsani on LinkedIn in a new tab." target="_blank">LinkedIn</a>
-                    <a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">Medium</a>
-                    <a href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Unsplash in a new tab.">Unsplash</a>
-                    <a href="https://vimeo.com/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Vimeo in a new tab.">Vimeo</a>
-                    <a href="https://www.youtube.com/channel/UCove4Z3eTye9jpBD4ShAFZA" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on YouTube in a new tab.">YouTube</a>
-                    <a href="https://codepen.io/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Codepen in a new tab.">Codepen</a>
-                    <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble" aria-label="Visit Derek Torsani on Dribbble in a new tab.">Dribbble</a>
-                </p>
-            </div>
-        </div>
-    </div>
+        <h1 class="text">From the desk of Derek Torsani</h1>
+        <p class="text quote">"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." — Tupac Shakur, 1992</p>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="codex.jpg" crunch="1"></as-dithered-image>
+        <h2 class="text">The design system for Wikimedia. ← <a href="https://doc.wikimedia.org/codex/latest/" target="_blank" title="Codex — The design system for Wikimedia" aria-label="Visit Codex in a new tab.">Codex</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="soundcolor.jpg" crunch="1"></as-dithered-image>
+        <h2 class="text">Can the feeling of music be evoked by means other than the audible spectrum? ← <a href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project" aria-label="Visit Sound Color Project in a new tab.">Sound Color Project</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="atreelikeme.jpg" crunch="1"></as-dithered-image>
+        <h2 class="text">A fantastical quest for belonging in two parts — book and album. ← Coming soon!</h2>
+        <!-- <h2 class="text">A fantastical quest for belonging in two parts — book and album. ← <a href="https://atreelikeme.com/" target="_blank" title="A Tree Like Me" aria-label="Visit A Tree Like Me in a new tab.">A Tree Like Me</a></h2> -->
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="seeds.jpg" crunch="1"></as-dithered-image>
+        <h2 class="text">The ambient, jazzy, debut album. ← <a href="https://open.spotify.com/album/4fJ6XazF261Ht02i5D4fJx?si=TqDd5JyZQrqcAB87gy4Bdw" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">Spotify</a> • <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1751715075" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">Apple Music</a> • <a href="https://tidal.com/browse/album/368972667" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">Tidal</a> • <a href="https://music.youtube.com/playlist?list=OLAK5uy_m44dk4TJJ5f9v1uo2FNx_x3Yfz2hVKOSg&si=09VDQMvRaMM0LF0V" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a> • <a href="https://music.amazon.com/albums/B0D6WFZQK3" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="newlife.png" crunch="1"></as-dithered-image>
+        <h2 class="text">New Life — a dedication to music collaborator and friend, the late, Shelley Barnes. ← <a href="https://open.spotify.com/album/3AuUvPQDc22u7VKZSEk7Mf?si=foFoIdE4TnCD8QhJM8OyzA" target="_blank" title="Spotify" aria-label="Listen to New Life by Intermission on Spotify in a new tab.">Spotify</a> • <a href="https://music.apple.com/us/album/new-life/1654687366" target="_blank" title="Apple Music" aria-label="Listen to New Life by Intermission on Apple Music in a new tab.">Apple Music</a> • <a href="https://tidal.com/browse/album/260878519" target="_blank" title="Tidal" aria-label="Listen to New Life by Intermission on Tidal in a new tab.">Tidal</a> • <a href="https://music.youtube.com/playlist?list=OLAK5uy_lZerQOrhmqXIJxdbmDWouy0fkDtyqovcA&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to New Life by Intermission on YouTube Music in a new tab.">YouTube Music</a> • <a href="https://music.amazon.com/albums/B0BMK2QKC4" target="_blank" title="Amazon Music" aria-label="Listen to New Life by Intermission on Amazon Music in a new tab.">Amazon Music</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="saytheirnames.png" crunch="1"></as-dithered-image>
+        <h2 class="text">Protest jazz from twenty twenty. ← <a href="https://open.spotify.com/album/6wuFeJtukTHBtHYihk2TlA?si=DF6EuAm8RRmOHq6Mxb8iEQ" target="_blank" title="Spotify" aria-label="Listen to Say Their Names by Derek Torsani on Spotify in a new tab.">Spotify</a> • <a href="https://music.apple.com/us/album/say-their-names-ep/1656951004" target="_blank" title="Apple Music" aria-label="Listen to Say Their Names by Derek Torsani on Apple Music in a new tab.">Apple Music</a> • <a href="https://tidal.com/browse/album/263761313" target="_blank" title="Tidal" aria-label="Listen to Say Their Names by Derek Torsani on Tidal in a new tab.">Tidal</a> • <a href="https://music.youtube.com/playlist?list=OLAK5uy_n1kF7MYeyEpErkqAug79Dytz94a5NgLs8&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Say Their Names by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a> • <a href="https://music.amazon.com/albums/B0BNLKG7VV" target="_blank" title="Amazon Music" aria-label="Listen to Say Their Names by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a> • <a href="https://derektorsani.bandcamp.com/album/say-their-names" target="_blank" title="Bandcamp" aria-label="Listen to Say Their Names by Derek Torsani on Bandcamp in a new tab.">Bandcamp</a> • Read about it on <a href="https://soundcloud.com/derektorsani/sets/say-their-names" target="_blank" title="SoundCloud" aria-label="Listen to Say Their Names by Derek Torsani on SoundCloud in a new tab.">SoundCloud</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="ghost.jpg" crunch="1"></as-dithered-image>
+        <h2 class="text">Alternative single featuring artist and woodworker, Casey Johnson. ← <a href="https://open.spotify.com/album/7enBUZl5guEfCCGynLN82P?si=TiaZHv6mQra-OKTMW1piNg" target="_blank" title="Spotify" aria-label="Listen to Ghost by Derek Torsani on Spotify in a new tab.">Spotify</a> • <a href="https://music.apple.com/us/album/ghost-feat-casey-reed-single/1750429683" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Derek Torsani on Apple Music in a new tab.">Apple Music</a> • <a href="https://tidal.com/browse/album/367466205" target="_blank" title="Tidal" aria-label="Listen to Ghost by Derek Torsani on Tidal in a new tab.">Tidal</a> • <a href="https://music.youtube.com/playlist?list=OLAK5uy_lZVwKXujNMtYpX92IcT1YSdeoEZQukQEs&si=oDtVp2uGf-iymKYO" target="_blank" title="YouTube Music" aria-label="Listen to Ghost by Derek Torsani on YouTube Music in a new tab.">YouTube Music</a> • <a href="https://music.amazon.com/albums/B0D663ZRF6" target="_blank" title="Amazon Music" aria-label="Listen to Ghost by Derek Torsani on Amazon Music in a new tab.">Amazon Music</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="lastmonth.png" crunch="1" alt="A vintage photograph of an older man in a boat on the water, holding his hat with mountains in the background"></as-dithered-image>
+        <h2 class="text">Memorial film in honor of mio Nonno. ← <a href="https://www.youtube.com/watch?v=1_bHvFZfrLg" aria-label="Watch Last Month in a new tab.">Last Month</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="belowtheline.png" crunch="1" alt="A typewriter typing out the words, 'Below Th'."></as-dithered-image>
+        <h2 class="text">Title sequence for a canceled web series. ← <a href="https://www.youtube.com/watch?v=NT9N7wiy0Dk" aria-label="Watch Below The Line in a new tab.">Below The Line</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="jantar-mantar.jpg" crunch="1" alt="A photograph of three separate black and white abstract line drawings."></as-dithered-image>
+        <h2 class="text">A wax pencil study of Jantar Mantar, Delhi, India. ← <a href="jantar-mantar.jpg" aria-label="Open the full resolution, color image in the same tab.">View</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="arthur.jpg" crunch="1" alt="A painting of a portrait of a dog sitting in a regal manner."></as-dithered-image>
+        <h2 class="text">Acrylic portrait of Arthur, our dog. ← <a href="arthur.jpg" aria-label="Open the full resolution, color image in the same tab.">View</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="srsly.jpg" crunch="1" alt="A series of white index cards, each with black yard letters threaded to spell out an abbreviation for 'dance with me'."></as-dithered-image>
+        <h2 class="text">srsly, a yarn-weaved alphabet — a comment on digital threads of abbreviated conversation. ← <a href="srsly.jpg" aria-label="Open the full resolution, color image in the same tab.">View</a></h2>
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="self2.jpeg" crunch="1" alt="A portrait of Derek Torsani."></as-dithered-image>
+        <h2 class="text"><a href="https://www.linkedin.com/in/derektorsani" target="_blank" title="LinkedIn" aria-label="Visit Derek Torsani on LinkedIn in a new tab." target="_blank">LinkedIn</a> • <a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">Medium</a> • <a href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Unsplash in a new tab.">Unsplash</a> • <a href="https://vimeo.com/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Vimeo in a new tab.">Vimeo</a> • <a href="https://www.youtube.com/channel/UCove4Z3eTye9jpBD4ShAFZA" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on YouTube in a new tab.">YouTube</a> • <a href="https://codepen.io/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Codepen in a new tab.">Codepen</a> • <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble" aria-label="Visit Derek Torsani on Dribbble in a new tab.">Dribbble</a></h2>
+    </section>
 
 </body>
 
