new website, whos this

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144041212-1"></script>
@@ -127,7 +127,7 @@
     </section>
 
     <section>
-        <as-dithered-image class="project" src="self2.jpeg" crunch="1" alt="A portrait of Derek Torsani."></as-dithered-image>
+        <as-dithered-image class="project" src="self.jpeg" crunch="1" alt="A portrait of Derek Torsani."></as-dithered-image>
         <h2 class="text"><a href="https://www.linkedin.com/in/derektorsani" target="_blank" title="LinkedIn" aria-label="Visit Derek Torsani on LinkedIn in a new tab." target="_blank">LinkedIn</a> • <a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">Medium</a> • <a href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Unsplash in a new tab.">Unsplash</a> • <a href="https://vimeo.com/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Vimeo in a new tab.">Vimeo</a> • <a href="https://www.youtube.com/channel/UCove4Z3eTye9jpBD4ShAFZA" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on YouTube in a new tab.">YouTube</a> • <a href="https://codepen.io/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Codepen in a new tab.">Codepen</a> • <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble" aria-label="Visit Derek Torsani on Dribbble in a new tab.">Dribbble</a></h2>
     </section>
 
