--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src='as-dithered-image.js'></script>
 
     <section>
-        <as-dithered-image class="image" src="portrait.jpg" crunch="1"></as-dithered-image>
+        <as-dithered-image class="image" src="favicon.png" crunch="1"></as-dithered-image>
         <div id="banner">
             <p>→</p>
             <p>design</p>
