--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script src='as-dithered-image.js'></script>
 
-    <section>
+    <section class="full">
         <as-dithered-image class="image" src="favicon.png" crunch="1"></as-dithered-image>
         <div id="banner">
             <p>→</p>
@@ -62,7 +62,7 @@
             <p>music</p>
         </div>
         <h1 class="text">From the desk of Derek Torsani</h1>
-        <p class="text quote">"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." — Tupac Shakur, 1992</p>
+        <p class="text full-text">"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." — Tupac Shakur, 1992</p>
     </section>
 
     <section>
@@ -103,7 +103,7 @@
 
     <section>
         <as-dithered-image class="project" src="lastmonth.png" crunch="1" alt="A vintage photograph of an older man in a boat on the water, holding his hat with mountains in the background"></as-dithered-image>
-        <h2 class="text">Memorial film in honor of mio Nonno. ← <a href="https://www.youtube.com/watch?v=1_bHvFZfrLg" aria-label="Watch Last Month in a new tab.">Last Month</a></h2>
+        <h2 class="text">Memorial film in honor of mio Nono. ← <a href="https://www.youtube.com/watch?v=1_bHvFZfrLg" aria-label="Watch Last Month in a new tab.">Last Month</a></h2>
     </section>
 
     <section>
@@ -126,9 +126,9 @@
         <h2 class="text">srsly, a yarn-weaved alphabet — a comment on digital threads of abbreviated conversation. ← <a href="srsly.jpg" aria-label="Open the full resolution, color image in the same tab.">View</a></h2>
     </section>
 
-    <section>
-        <as-dithered-image class="project" src="self.jpeg" crunch="1" alt="A portrait of Derek Torsani."></as-dithered-image>
-        <h2 class="text"><a href="https://www.linkedin.com/in/derektorsani" target="_blank" title="LinkedIn" aria-label="Visit Derek Torsani on LinkedIn in a new tab." target="_blank">LinkedIn</a> • <a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">Medium</a> • <a href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Unsplash in a new tab.">Unsplash</a> • <a href="https://vimeo.com/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Vimeo in a new tab.">Vimeo</a> • <a href="https://www.youtube.com/channel/UCove4Z3eTye9jpBD4ShAFZA" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on YouTube in a new tab.">YouTube</a> • <a href="https://codepen.io/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Codepen in a new tab.">Codepen</a> • <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble" aria-label="Visit Derek Torsani on Dribbble in a new tab.">Dribbble</a></h2>
+    <section class="full">
+        <as-dithered-image class="project" src="self.jpg" crunch="1" alt="A portrait of Derek Torsani."></as-dithered-image>
+        <h2 class="text full-text"><a href="https://www.linkedin.com/in/derektorsani" target="_blank" title="LinkedIn" aria-label="Visit Derek Torsani on LinkedIn in a new tab." target="_blank">LinkedIn</a> • <a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">Medium</a> • <a href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Unsplash in a new tab.">Unsplash</a> • <a href="https://vimeo.com/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Vimeo in a new tab.">Vimeo</a> • <a href="https://www.youtube.com/channel/UCove4Z3eTye9jpBD4ShAFZA" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on YouTube in a new tab.">YouTube</a> • <a href="https://codepen.io/dmtors" target="_blank" title="Unsplash" aria-label="Visit Derek Torsani on Codepen in a new tab.">Codepen</a> • <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble" aria-label="Visit Derek Torsani on Dribbble in a new tab.">Dribbble</a></h2>
     </section>
 
 </body>
