--- a/index.html
+++ b/index.html
@@ -27,40 +27,6 @@
 
     <section class="full">
         <as-dithered-image class="image" src="favicon.png" crunch="1"></as-dithered-image>
-        <div id="banner">
-            <p>→</p>
-            <p>design</p>
-            <svg viewBox="0 0 100 100" style="--duration: 1.5s">
-                <!-- Small filled-in center circle -->
-                <circle cx="50" cy="50" r="15" />
-                
-                <!-- Half circle path -->
-                <path 
-                d="M 50 10 
-                    A 40 40 0 0 1 90 50 
-                    A 40 40 0 0 1 50 90" 
-                fill="none" 
-                stroke-width="10" 
-                class="half-circle"
-                />
-            </svg>
-            <p>art</p>
-            <svg viewBox="0 0 100 100" style="--duration: 1.75s">
-                <!-- Small filled-in center circle -->
-                <circle cx="50" cy="50" r="15" />
-                
-                <!-- Half circle path -->
-                <path 
-                    d="M 50 10 
-                        A 40 40 0 0 1 90 50 
-                        A 40 40 0 0 1 50 90" 
-                    fill="none" 
-                    stroke-width="10" 
-                    class="half-circle"
-                />
-            </svg>
-            <p>music</p>
-        </div>
         <h1 class="text">From the desk of Derek Torsani</h1>
         <p class="text full-text">"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." — Tupac Shakur, 1992</p>
     </section>
@@ -79,6 +45,11 @@
         <as-dithered-image class="project" src="atreelikeme.jpg" crunch="1"></as-dithered-image>
         <h2 class="text">A fantastical quest for belonging in two parts — book and album. ← Coming soon!</h2>
         <!-- <h2 class="text">A fantastical quest for belonging in two parts — book and album. ← <a href="https://atreelikeme.com/" target="_blank" title="A Tree Like Me" aria-label="Visit A Tree Like Me in a new tab.">A Tree Like Me</a></h2> -->
+    </section>
+
+    <section>
+        <as-dithered-image class="project" src="bisnoni.png" crunch="1"></as-dithered-image>
+        <h2 class="text">Creator and chef of an invite-only, popup Italian restaurant in Baltimore. ← <a href="/bisnoni.html" target="_blank" title="Bisnoni" aria-label="Visit Bisnoni in a new tab.">Bisnoni</a></h2>
     </section>
 
     <section>
