--- a/bisnoni.html
+++ b/bisnoni.html
@@ -51,6 +51,12 @@
                 </div>
             </div>
             <div class="menu-item">
+                <p>grandma pizza</p>
+                <div>
+                    <p>—</p><p>d.o.p. san marzano tomatoes, extra virgin olive oil</p>
+                </div>
+            </div>
+            <div class="menu-item">
                 <p>margherita pizza (spring and summer only)</p>
                 <div>
                     <p>—</p><p>d.o.p. san marzano tomatoes, fresh mozzarella, basil, shaved garlic, pepper flakes, extra virgin olive oil</p>
@@ -93,6 +99,12 @@
                 </div>
             </div>
             <div class="menu-item">
+                <p>pizza della nonna</p>
+                <div>
+                    <p>—</p><p>d.o.p. pomodori da san marzano, olio extra vergine di oliva</p>
+                </div>
+            </div>
+            <div class="menu-item">
                 <p>pizza margherita (solo primavera e estate)</p>
                 <div>
                     <p>—</p><p>d.o.p. pomodori da san marzano, mozzarella fresca, basilico, aglio rasato, scaglie di pepe, olio extra vergine di oliva</p>
@@ -117,7 +129,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <p>citrus pignoli</p>
+                <p>pignoli agli agrumi</p>
                 <div>
                     <p>—</p><p>mandorla, pinoli, scorza di limone e arancia</p>
                 </div>
