--- a/bisnoni.html
+++ b/bisnoni.html
@@ -90,7 +90,7 @@
         </div>
         <div id="content-it" class="hidden">
             <p>benvenuto a bisnoni, un ristorante italiano popup solo su invito a baltimora. <u>tutto</u> è reso fresco ogni servizio</p>
-            <p>“nessuna nota” • “hai perfezionato il tuo sugo” • “mi riporta in italia</p>
+            <p>“nessuna nota” • “hai perfezionato il tuo sugo” • “mi riporta in italia"</p>
             <p><u>menu</u></p>
             <div class="menu-item">
                 <p>quattro stagioni</p>
