--- a/bisnoni.html
+++ b/bisnoni.html
@@ -12,7 +12,7 @@
     <title>Bisnoni</title>
 </head>
 
-<body class="bisnoni">
+<body id="bisnoni">
 
     <script src='as-dithered-image.js'></script>
 
