--- a/tuner.html
+++ b/tuner.html
@@ -17,7 +17,7 @@
         }
         #main-container {
             width: 100%;
-            height: calc(100% - 75px);
+            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -50,9 +50,11 @@
             font-family: monospace;
             letter-spacing: 1px;
             padding: 5px;
+            margin: 0 auto;
             border: 0;
             outline: 1px solid;
             border-right: 5px solid transparent;
+            background-color: #b3aca6;
         }
         html,
         html[data-theme=light] body {
@@ -72,6 +74,9 @@
             html:not([data-theme]) #needle {
                 background: #b3aca6;
             }
+            html:not([data-theme]) #tuning-select {
+                background-color: #454140;
+            }
         }
     </style>
 </head>
@@ -83,15 +88,14 @@
         <div id="needle-container">
             <div id="needle"></div>
         </div>
+        <select id="tuning-select">
+          <option value="415">A415</option>
+          <option value="432">A432</option>
+          <option value="440" selected>A440 (default)</option>
+          <option value="442">A442</option>
+          <option value="444">A444</option>
+        </select>
     </div>
-
-    <select id="tuning-select">
-        <option value="415">A415</option>
-        <option value="432">A432</option>
-        <option value="440" selected>A440 (default)</option>
-        <option value="442">A442</option>
-        <option value="444">A444</option>
-    </select>
 
   <script>
     const noteElem = document.getElementById('note');
