--- a/tuner.html
+++ b/tuner.html
@@ -1,93 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tuner</title>
-    <style>
-        body {
-            font-family: monospace;
-            letter-spacing: 1px;
-            text-align: center;
-            margin: 0;
-            background: #b3aca6;
-            color: #454140;
-            width: 100vw;
-            height: 100vh;
-        }
-        #main-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 25px;
-        }
-        #note {
-            font-size: 1.5rem;
-        }
-        #frequency, #detune {
-            font-size: 0.75rem;
-        }
-        #needle-container {
-            width: 100%;
-            height: 25px;
-            margin: 0 auto;
-            position: relative;
-            background: transparent;
-        }
-        #needle {
-            width: 2px;
-            height: 25px;
-            background: #454140;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transition: left 0.125s ease-in-out;
-        }
-        #tuning-select {
-            font-size: 0.75rem;
-            font-family: monospace;
-            letter-spacing: 1px;
-            padding: 5px;
-            margin: 0 auto;
-            border: 0;
-            outline: 1px solid;
-            border-right: 5px solid transparent;
-            background-color: #b3aca6;
-        }
-        html,
-        html[data-theme=light] body {
-            color-scheme: light;
-            color: #454140;
-            background-color: #b3aca6;
-        }
-        html[data-theme=light] #needle {
-            background: #454140;
-        }
-        @media (prefers-color-scheme: dark) {
-            html:not([data-theme]) body {
-                color-scheme: dark;
-                color: #b3aca6;
-                background-color: #454140;
-            }
-            html:not([data-theme]) #needle {
-                background: #b3aca6;
-            }
-            html:not([data-theme]) #tuning-select {
-                background-color: #454140;
-            }
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>tuner</title>
 </head>
-<body>
-    <div id="main-container">
+
+<body style="height: calc(100vh - 60px);">
+
+    <div id="tuner-container">
+        <div id="needle-container">
+          <div id="needle"></div>
+        </div>
         <div id="note">--</div>
         <div id="frequency">-- Hz</div>
         <div id="detune">-- cents</div>
-        <div id="needle-container">
-            <div id="needle"></div>
-        </div>
         <select id="tuning-select">
           <option value="415">A415</option>
           <option value="432">A432</option>
